--- a/example1.html
+++ b/example1.html
@@ -3,24 +3,25 @@
 <link rel="stylesheet" type="text/css" href="css/example.css" />
 </head>
 <body>
-<h2>Example 1: Populate Single Value</h2>
+<h1>Example 1: Populate Single Value</h1>
 <h4 id="unit1-title">1.1 Populate DIV HTML</h4>
-<div id="unit1" data-ej-load="http://eachjsapi.azurewebsites.net/data/dot"></div>
+<div id="unit1" data-ej-load="http://eachdataapi.azurewebsites.net/data/dot"></div>
 <h4 id="unit2-title">1.2 Populate LI HTML</h4>
 <ul>
 	<li>Laura</li>
-	<li id="unit2" data-ej-load="http://eachjsapi.azurewebsites.net/data/dot"></li>
+	<li id="unit2" data-ej-load="http://eachdataapi.azurewebsites.net/data/dot"></li>
 </ul>
 <h4 id="unit3-title">1.3 Populate INPUT TEXT</h4>
-<input id="unit3" type="text" data-ej-load="http://eachjsapi.azurewebsites.net/data/dot" />
+<input id="unit3" type="text" data-ej-load="http://eachdataapi.azurewebsites.net/data/dot" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="js/each-1.0.js" type="text/javascript"></script>
+<!-- Below are unit tests -->
 <hr />
 <div id="message"></div>
 <div id="message-template" class="hide">
 	<div class="passed-message"><span class="title"></span> Passed</div>
 	<div class="failed-message"><span class="title"></span> Failed</div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/each-0.11.js" type="text/javascript"></script>
 <script type="text/javascript">
 var fnRunTest1 = function() {
 	var expected = "Sample: Dot";
