--- a/example10.html
+++ b/example10.html
@@ -2,8 +2,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/example.css" />
 </head>
-<body data-ej-base="http://eachjsapi.azurewebsites.net">
-<h2>Example 10: Bulk Insert</h2>
+<body data-ej-base="http://eachdataapi.azurewebsites.net">
+<h1>Example 10: Bulk Insert</h1>
 <table id="unit1">
 	<tr>
 		<td>Name</td>
@@ -31,9 +31,8 @@
 <div id="addItemStatus" class="status hide">
 	Status: added
 </div>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/each-0.11.js" type="text/javascript"></script>
+<script src="js/each-1.0.js" type="text/javascript"></script>
 <!-- Below are unit tests -->
 <hr />
 <div id="message"></div>
