--- a/example2.html
+++ b/example2.html
@@ -3,19 +3,20 @@
 <link rel="stylesheet" type="text/css" href="css/example.css" />
 </head>
 <body>
-<h2>Example 2: Populate Simple Object</h2>
+<h1>Example 2: Populate Simple Object</h1>
 <h4 id="unit1-title">2.1 Populate content</h4>
-<div id="unit1" data-ej-load="http://eachjsapi.azurewebsites.net/data/line">{{Name}}</div>
+<div id="unit1" data-ej-load="http://eachdataapi.azurewebsites.net/data/line">{{Name}}</div>
 <h4 id="unit2-title">2.2 Populate content with format</h4>
-<div id="unit2" data-ej-load="http://eachjsapi.azurewebsites.net/data/line">{{Name}}, then {{Text}}</div>
+<div id="unit2" data-ej-load="http://eachdataapi.azurewebsites.net/data/line">{{Name}}, then {{Text}}</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="js/each-1.0.js" type="text/javascript"></script>
+<!-- Below are unit tests -->
 <hr />
 <div id="message"></div>
 <div id="message-template" class="hide">
 	<div class="passed-message"><span class="title"></span> Passed</div>
 	<div class="failed-message"><span class="title"></span> Failed</div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/each-0.11.js" type="text/javascript"></script>
 <script type="text/javascript">
 var fnRunTest1 = function() {
 	var expected = "Sample: Name";
