--- a/example5.html
+++ b/example5.html
@@ -2,8 +2,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/example.css" />
 </head>
-<body data-ej-base="http://eachjsapi.azurewebsites.net">
-<h2>Example 5: External Functions</h2>
+<body data-ej-base="http://eachdataapi.azurewebsites.net">
+<h1>Example 5: External Functions</h1>
 <h4 id="unit1-title">5.1 Call Function</h4>
 <div>What qualifies Best Samples?</div>
 <div data-ej-load="/data/line" data-ej-load-output="fnSetSpecs"></div>
@@ -16,7 +16,7 @@
 	<li data-ej-repeat><span>{{i}},</span> <span class="bank-name">{{[].name}}</span></li>
 </ul>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/each-0.11.js" type="text/javascript"></script>
+<script src="js/each-1.0.js" type="text/javascript"></script>
 <script>
 // Custom logic: use special layout when loading data
 var fnSetSpecs = function(data) {
