--- a/example6.html
+++ b/example6.html
@@ -2,8 +2,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/example.css" />
 </head>
-<body data-ej-base="http://eachjsapi.azurewebsites.net">
-<h2>Example 6: Create, Read, Update, and Delete</h2>
+<body data-ej-base="http://eachdataapi.azurewebsites.net">
+<h1>Example 6: Create, Read, Update, and Delete</h1>
 <div>Items:</div>
 <table id="items" data-ej-load="/data/items">
 	<tr data-ej-repeat>
@@ -39,7 +39,7 @@
 	<span id="updateSuccess" class="hide">Updated</span>	
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/each-0.11.js" type="text/javascript"></script>
+<script src="js/each-1.0.js" type="text/javascript"></script>
 <!-- Below are unit tests -->
 <hr />
 <div id="message"></div>
