--- a/example7.html
+++ b/example7.html
@@ -5,9 +5,9 @@
 body { padding-top:50px;margin:0px; }
 </style>
 </head>
-<body data-ej-base="http://eachjsapi.azurewebsites.net">
-<h2>Example 7: Authorized Contents</h2>
-<div class="fixedHeader">
+<body data-ej-base="http://eachdataapi.azurewebsites.net">
+<h1>Example 7: Authorized Contents</h1>
+<div class="fixed-header">
     <div id="header" class="container">
 		<div id="memberAuthorized" class="hide" data-ej-load="/data/account" data-ej-load-auth="(storage)accountToken"
 			data-ej-load-output="#memberAuthorized(populate,show);#memberNotAuthorized(hide)"
@@ -48,7 +48,7 @@ body { padding-top:50px;margin:0px; }
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/each-0.11.js" type="text/javascript"></script>
+<script src="js/each-1.0.js" type="text/javascript"></script>
 <!-- Below are unit tests -->
 <hr />
 <div id="message"></div>
