--- a/example8.html
+++ b/example8.html
@@ -2,8 +2,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/example.css" />
 </head>
-<body data-ej-base="http://eachjsapi.azurewebsites.net">
-<h2>Example 8: Cascading Menu</h2>
+<body data-ej-base="http://eachdataapi.azurewebsites.net">
+<h1>Example 8: Cascading Menu</h1>
 <select id="banks" data-ej-load="/data/banks" data-ej-change="/data/banks"
 	data-ej-change-input="id;key2@#branchesKey"
 	data-ej-change-output="#branches(,enable);#departments(reset,disable)">
@@ -24,7 +24,7 @@
 	<option data-ej-repeat value="{{[].id}}">{{[].name}}</option>
 </select>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/each-0.11.js" type="text/javascript"></script>
+<script src="js/each-1.0.js" type="text/javascript"></script>
 <!-- Below are unit tests -->
 <hr />
 <div id="message"></div>
