--- a/example9.html
+++ b/example9.html
@@ -2,8 +2,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/example.css" />
 </head>
-<body data-ej-base="http://eachjsapi.azurewebsites.net">
-<h2>Example 9: Navigation Wizard</h2>
+<body data-ej-base="http://eachdataapi.azurewebsites.net">
+<h1>Example 9: Navigation Wizard</h1>
 <ul class="ul-wizard">
 	<li id="tab1" class="li-wizard cyan">Step 1</li>
 	<li id="tab2" class="li-wizard lightgray">Step 2</li>
@@ -22,7 +22,7 @@
 	<button id="button3" data-ej-click-output="(url)reload">Start Over</button>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/each-0.11.js" type="text/javascript"></script>
+<script src="js/each-1.0.js" type="text/javascript"></script>
 <!-- Below are unit tests -->
 <hr />
 <div id="message"></div>
