--- a/example0.html
+++ b/example0.html
@@ -3,9 +3,14 @@
 </head>
 <body>
 <h4 id="unit1-title">1.1a Populate DIV HTML</h4>
-<div id="unit1" data-ej-load="$ejdot"></div>
+<div id="unit1" data-load="$ejdot"></div>
 <script type="text/javascript">
   $ejdot = "Sample: Dot";
+</script>
+<script>
+	function eachjsCustom() {
+		eachjs.attributes.dataLoad = "data-load";
+	}
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/each-1.0.js" type="text/javascript"></script>
